--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li>Double click your value is delected</li>
             </ul>
             <button class="btn2">Accept</button> 
+            <h3>Created By suresh<h3>
         </div>
     </div>
    
